--- a/css/main2.css
+++ b/css/main2.css
@@ -7,15 +7,18 @@ html{
   border-radius: 50px;
 }
 /*Clases reutilizables*/
-.flex-direction-row{
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-}
 h5{
   font-weight: bold;
   color: rgb(59,89,152);
+}
+.card-body-function{
+  padding: 20px 0;
+}
+.padding-function-rows{
+  padding: 30px 0 30px 0;
+}
+div.card div.card-body{
+  height: 20rem;
 }
 .style-box-services{
   opacity: .99;
