--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -90,7 +90,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <h1 class="center-align">Nuestros socios estratégicos</h1>
+            <h1 class="center-align">Nuestro socio estratégico</h1>
             <hr class="hr-style-gib">
             <br>
           </div>
@@ -136,105 +136,143 @@
     </section>
 
     <!--sección funcionalidades-->
-    <section class="">
+    <section class="padding-box-products">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12">
-            <h5 class="center-align">Con una sola herramienta puede monitorizar todos sus dispositivos, servidores, aplicaciones, servicios o procesos de negocio, del tipo que sean.</h5>
+          <div class="col-sm-12">
+            <br>
+            <h5 class="center-align">Gracias a Pandora FMS, con una sola herramienta puede monitorizar todos sus dispositivos, servidores, aplicaciones, servicios o procesos de negocio, del tipo que sean.</h5>
+            <hr class="hr-style-gib">
           </div>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row">
-          <div class="col-5 offset-1">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-1.jpg" alt="Redes" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">Redes</h6>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Control total de todo tipo de dispositivos de red sin importar modelo o tamaño.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-5">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-2.jpg" alt="Servidores" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">Servidores</h6>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Planifique su capacidad y monitorice desde el hardware al sistema operativo.</p>
+          <div class="col-12 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-1.jpg" alt="Redes"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">Redes</h4>
+                  <p class="center-align">Control total de todo tipo de dispositivos de red sin importar modelo o tamaño.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-5 offset-1">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-3.jpg" alt="Aplicaciones" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">Aplicaciones</h6>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Plugins configurados para obtener métricas de rendimiento de las tecnologías estándar del mercado.</p>
+          <div class="col-12 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-2.jpg" alt="Servidores"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">Servidores</h4>
+                  <p class="center-align">Planifique su capacidad y monitorice desde el hardware al sistema operativo.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-5">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-4.jpg" alt="Experiencia" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">Experiencia de usuario</h6>
+          <div class="col-12 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-3.jpg" alt="Aplicaciones"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">Aplicaciones</h4>
+                  <p class="center-align">Plugins configurados para obtener métricas de rendimiento de las tecnologías estándar del mercado.</p>
+                </div>
               </div>
-              <div class="card-body">
-                <p class="card-text">Realice pruebas transaccionales de sus aplicaciones web tal y como lo harían sus usuarios.</p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-4.jpg" alt="Experiencia"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">Experiencia de usuario</h4>
+                  <p class="center-align">Realice pruebas transaccionales de sus aplicaciones web tal y como lo harían sus usuarios.</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-5 offset-1">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-5.jpg" alt="Logs" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">Logs</h6>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Obtenga logs de SO y aplicación desde los agentes de monitorización.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-5">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-6.jpg" alt="Cloud" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">Cloud</h6>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Unifique la monitorización de todos sus entornos distribuidos en una única herramienta.</p>
+          <div class="col-12 col-lg-3 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-5.jpg" alt="Logs"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">Logs</h4>
+                  <p class="center-align">Obtenga logs de SO y aplicación desde los agentes de monitorización.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-5 offset-1">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-7.jpg" alt="SAP" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">SAP</h6>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Métricas específicas con nuestro plugin certificado por SAP para R3 y SAP Hana.</p>
+          <div class="col-12 col-lg-3 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-6.jpg" alt="Cloud"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">Cloud</h4>
+                  <p class="center-align">Unifique la monitorización de todos sus entornos distribuidos en una única herramienta.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-5">
-            <div class="">
-              <div class="flex-direction-row">
-                <a href="#"><img class="card-img-top" src="../assets/images/icono-8.jpg" alt="Control" style="width:70%;"></a>
-                <h6 class="d-inline-block align-items-center" style="width:30%;">Control remoto</h6>
-              </div>
-              <div class="card-body">
-                <p class="card-text">Acceso remoto completo a sus servidores y estaciones de trabajo desde nuestra consola.</p>
+          <div class="col-12 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-7.jpg" alt="SAP"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">SAP</h4>
+                  <p class="center-align">Métricas específicas con nuestro plugin certificado por SAP para R3 y SAP Hana.</p>
+                </div>
               </div>
             </div>
+          </div>
+          <div class="col-12 col-lg-3">
+            <div class="padding-function-rows">
+              <div class="row">
+                <div class="col-5">
+                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-8.jpg" alt="Control"></a>
+                </div>
+                <div class="col-6">
+                  <h4 class="center-align">Control remoto</h4>
+                  <p class="center-align">Acceso remoto completo a sus servidores y estaciones de trabajo.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Sección casos de éxito-->
+    <section class="background-gray padding-box-products">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1 class="center-align">Casos de éxito</h1>
+            <hr class="hr-style-gib">
+            <br>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12">
+            <h5 class="center-align"> A continuación, te presentaremos algunos casos de éxito (....). Para más información, da click a cada imagen.</h5>
           </div>
         </div>
       </div>
